[package]
name = "factory-tools"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
itertools = "0.14.0"
log = "0.4.29"
nalgebra = "0.34.1"
num-rational = "0.4.2"
num-traits = { version = "0.2.19", features = ["i128"] }
pretty_env_logger = "0.5.0"
smol_str = "0.3.5"
snafu = "0.8.9"
strum = { version = "0.27.2", features = ["derive"] }
